# oDot

./: .env.example  .gitignore  LICENSE  README.md  README.zh-CN.md  package-lock.json  package.json  prompt.txt  tsconfig.base.json  tsconfig.json
apps/desktop/: index.html  vite.config.ts
apps/desktop/src/: App.tsx  FloatBall.tsx  OdodBotIcon.tsx  api.ts  floatAgentStatus.ts  main.tsx  promptAttachments.ts  sessionStore.ts  styles.css
apps/desktop/src/i18n/: index.ts
apps/desktop/src/i18n/locales/: en.json  zh.json
apps/server/src/: index.ts
scripts/: sync-app-icons.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: config_file.rs  error_model.rs  event_bus.rs  i18n.rs  lib.rs  llm_runtime.rs  main.rs  mutation.rs  provider.rs  runner.rs  storage.rs  tools.rs  types.rs  util.rs  workspace.rs
