[package]
name = "odot"
version = "0.1.0"
description = "A cross-IDE AI coding assistant."
authors = ["oDot contributors"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "odot_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
futures-util = "0.3"
rusqlite = { version = "0.32", features = ["bundled"] }
keyring = "3"
sha2 = "0.10"
uuid = { version = "1", features = ["v4", "serde"] }
encoding_rs = "0.8"
tauri = { version = "2.11.2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-log = "2"
tokio = { version = "1", features = ["sync", "time"] }
